--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -2,3 +2,35 @@
     width: 40px;
     height: 40px;
 }
+
+#card1{
+    margin-left: 1%;
+}
+#card2{}
+#card3{
+    margin-right: 1%;
+}
+#orders{
+    width: 50px;
+    height: 50px;
+}
+
+#navMenu a{
+    font-family: "Arial Black", serif;
+
+}
+
+#logo{
+    position: relative;
+    left: 10px;
+    bottom:10px;
+}
+
+#searchOrder{
+    margin-left: 66.5%;
+}
+
+.dashBordTable{
+        overflow-y: scroll;
+        max-height: 250px;
+}
