--- a/assets/css/item.css
+++ b/assets/css/item.css
@@ -2,3 +2,31 @@
     width: 40px;
     height: 40px;
 }
+
+.itemTable{
+    max-height: 250px;
+    overflow-y: scroll;
+}
+
+#btnSave{
+    margin-left: 1%;
+}
+#btnUpdate{
+    margin-left:5% ;
+}
+#btnDelete{
+    margin-left:5% ;
+}
+
+#navMenu a{
+    /*margin-left: 40px;*/
+    font-family: "Arial Black", serif;
+
+}
+
+#logo{
+    position: relative;
+    left: 10px;
+    bottom:10px;
+}
+
