--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -30,7 +30,7 @@
     margin-top: 40px;
     margin-left: 20px;
     font-size: 20px;
-    background: #1154BF;
+    background: green;
 }
 
 .passwordHelp{
