--- a/assets/css/forgetpassword.css
+++ b/assets/css/forgetpassword.css
@@ -11,7 +11,7 @@
     font-weight: bold;
     font-size: 30px;
 }
-#sign-up-form{
+#forget-password-form{
     margin-top: 100px;
     width: 30vw;
     height: 70vh;
@@ -33,9 +33,9 @@
     background: red;
 }
 
-#sign-up{
+#create{
     margin-top: 40px;
-    margin-left: 36%;
+    margin-left: 37%;
     font-size: 15px;
     background: green;
 }
