--- a/assets/css/forgetPassword.css
+++ b/assets/css/forgetPassword.css
@@ -11,7 +11,7 @@
     font-weight: bold;
     font-size: 30px;
 }
-#sign-in-form {
+#forget-password-form{
     margin-top: 100px;
     width: 30vw;
     height: 70vh;
@@ -26,20 +26,20 @@
 }
 
 
-#sign-in-btn{
+#back{
+    margin-top: 40px;
+    margin-left: 20px;
     font-size: 15px;
+    background: red;
+}
+
+#create{
+    margin-top: 40px;
     margin-left: 37%;
-    margin-top: 10%;
-    background: #1154BF;
+    font-size: 15px;
+    background: green;
 }
 
-#passwordHelp{
-    margin-left: 182px;
-    font-weight: bold;
-    color: #008DDA;
-    text-decoration: none;
-}
 
-.noAcc{
-    margin-top: 60px;
-}
+
+
