--- a/assets/css/item.css
+++ b/assets/css/item.css
@@ -1,24 +1,20 @@
-.customerTable{
-    overflow: hidden;
-}
-
-.customerTable{
-    max-height: 250px;
-    overflow-y: scroll;
-}
-
 #logo{
     width: 40px;
     height: 40px;
 }
 
-#saveBtn{
+.itemTable{
+    max-height: 250px;
+    overflow-y: scroll;
+}
+
+#btnSave{
     margin-left: 1%;
 }
-#updateBtn{
+#btnUpdate{
     margin-left:5% ;
 }
-#deleteBtn{
+#btnDelete{
     margin-left:5% ;
 }
 
@@ -33,3 +29,4 @@
     left: 10px;
     bottom:10px;
 }
+
