--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,45 +1,113 @@
-.shadow-card {
-    box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 7px
+.login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    min-height: 90vh;
+
 }
-.welcome{
-    color: black;
-    font-size: 28px;
-    font-weight: bold;
-}
-.GreenCart{
-    color: #008DDA;
-    font-weight: bold;
-    font-size: 30px;
-}
-#sign-in-form {
-    margin-top: 100px;
-    width: 30vw;
-    height: 70vh;
-    border-radius: 15px;
+.login-area{
+    width: 880px;
+    min-height: 400px;
+    overflow: hidden;
+    border-radius: 5px;
+    background: #222;
+    display: flex;
+    box-shadow: 15px 5px 30px rgba(0,0,0,0.3);
+  /*  border: 1px solid black;*/
 }
 
-.userName{
-    width: 22vw;
+.login-img{
+    flex-basis: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #00b894;
 }
-.password{
-    width: 22vw;
+.login-img img{
+    width: 100%;
 }
 
+.login-form{
+    flex-basis: 50%;
+    background: #333;
+    font-family: roboto, serif;
+    padding: 25px;
+}
 
-#sign-in-btn{
+.login-form h1{
+    text-align: center;
+    margin-top: 25px;
+    font-size: 2.5em;
+    margin-bottom: 50px;
+    color: #fff;
+}
+
+.t-box{
+    border-radius: 3px;
+    background: transparent;
+    outline: none;
+    border: 1px solid #55efc4;
+    width: 100%;
+    min-height: 35px;
+    margin: 30px 0;
+}
+
+.t-box input{
+    background: transparent;
+    width: 90%;
+    outline: none;
+    border: 0;
+    padding-left: 5px;
+}
+
+::placeholder{
+    color: #777;
+}
+
+.t-box i{
+    color: #55efc4;
     font-size: 15px;
-    margin-left: 37%;
-    margin-top: 10%;
-    background: #1154BF;
+    padding: 7px;
+
 }
 
-#passwordHelp{
-    margin-left: 182px;
-    font-weight: bold;
-    color: #008DDA;
-    text-decoration: none;
+.login-form a{
+    margin-left: 70%;
+    /*margin-top: 10%;*/
+    color: red;
 }
 
-.noAcc{
-    margin-top: 60px;
+.login-btn{
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+    background: #00b894;
+    color: #fff;
+    padding: 6px 12px;
+    font-size: 18px;
+}
+
+.login-img:hover img{
+    transform: scale(1.1);
+}
+
+.sign-up{
+    position: relative;
+    right: 28%;
+    top: 1rem;
+    margin: 0;
+
+}
+
+/*responsive*/
+@media(width:768px) {
+    .login-area{
+        flex-direction: column;
+        margin: 0 15px;
+    }
+    .login-form{
+        flex-basis: 75%;
+    }
 }
