--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,8 @@
 .alert{
     font-size: 12px;
-    color: red;
+    color: #ff0026;
 }
-.bd-colour{
-    border: 1px solid red;
+/*.bd-colour{
+    border: 1px solid #22ff00;
 
-}
+}*/
